# uri2png

./: .gitignore  Makefile  README.md  cli.js  index.js  package.json  readme.rst  setup.py  uri2png.py
engines/: chrome-devtools.js  playwright.js  puppeteer.js  selenium.js  webkit-native.js
examples/: demo-all-engines.js  demo-playwright.js  demo-puppeteer.js  demo-selenium.js
extensions/: build.cjs
extensions/chrome/: background.js  popup.js
extensions/firefox/: manifest.json
extensions/safari/: manifest.json
extensions/shared/: popup.html
lib/: base-engine.js
nextjs/: next.config.js  package.json
nextjs/app/: layout.js  page.js  route.js
nextjs/app/health/: route.js
nextjs/app/screenshot/capture/image/: route.js
nextjs/app/screenshot/engines/: route.js
nextjs/lib/: capture.js
python/: README.md  pyproject.toml  requirements.txt
python/uri2png/: __init__.py  base.py  cli.py  server.py
python/uri2png.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/uri2png/engines/: __init__.py  native.py  playwright.py  selenium.py
uri2png/: __init__.py  __main__.py  uri2png.py
