[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uri2png"
version = "2.0.0"
description = "Multi-engine web screenshot tool with FastAPI server"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Russell Ballestrini", email = "russell@ballestrini.net"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "playwright>=1.40.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
selenium = [
    "selenium>=4.15.0",
]
all = [
    "selenium>=4.15.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[project.scripts]
uri2png = "uri2png.cli:main"

[project.urls]
Homepage = "https://github.com/russellballestrini/uri2png"
Repository = "https://github.com/russellballestrini/uri2png"

[tool.setuptools.packages.find]
where = ["."]
include = ["uri2png*"]
